Fix hr spacing in News

--- a/mnd/static/css/style.css
+++ b/mnd/static/css/style.css
@@ -94,8 +94,16 @@ p#updated {
 hr {
     max-width: 768px;
     margin-left: 25px;
-    margin-top: 30px !important;
+    margin-top: 30px;
     margin-bottom: 10px;
+}
+
+.news + p {
+    margin-bottom: 0;
+}
+
+p + hr {
+    margin-top: 5px;
 }
 
 a,
